Revert "Allow patients to edit and delete readings"
